fixing weird spacing issue in crud

--- a/dashboard/css/style.css
+++ b/dashboard/css/style.css
@@ -319,7 +319,11 @@ ul.sidebar-menu li a.active i {
 /*main content*/
 
 #main-content {
-    margin-left: 225px;
+    margin-left: 210px;
+}
+
+#crud-main-content {
+    margin-left: 235px;
 }
 
 .header, .footer {
@@ -700,7 +704,11 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
 }
 
 .sidebar-closed #main-content {
-    margin-left: 15px;
+    margin-left: 0px;
+}
+
+.sidebar-closed #crud-main-content {
+    margin-left: 0px;
 }
 
 .sidebar-closed #sidebar {
